--- a/data/mock_data.ipynb
+++ b/data/mock_data.ipynb
@@ -312,12 +312,12 @@
         "    json.dump(count_data, file)\n",
         "\n",
         "# csv 저장\n",
-        "df.to_csv(\"./news_data.csv\", index=False)"
+        "df.to_csv(\"./news_data.csv\", index=False, sep='\\t')"
       ],
       "metadata": {
         "id": "dFecsli6Hl7s"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": []
     }
   ],
