--- a/data/mock_data.ipynb
+++ b/data/mock_data.ipynb
@@ -26,6 +26,7 @@
       "source": [
         "import sys\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
         "import json\n",
         "\n",
         "from collections import Counter\n",
@@ -34,7 +35,7 @@
       "metadata": {
         "id": "6sWiKzUvzLAG"
       },
-      "execution_count": 4,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -48,7 +49,7 @@
       "metadata": {
         "id": "mohldGgnzOmp"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -63,7 +64,22 @@
       "metadata": {
         "id": "ZYub9p6N1lpR"
       },
-      "execution_count": 6,
+      "execution_count": 137,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# img URI의 길이가 너무 길다\n",
+        "# df[df[\"news_img_path\"].fillna(\"\").apply(lambda x: len(x))>200][\"news_img_path\"]\n",
+        "# 158번 기사(67798), 184번 기사(175974)\n",
+        "\n",
+        "df.loc[df[\"news_img_path\"].fillna(\"\").apply(lambda x: len(x))>200, 'news_img_path'] = \"\""
+      ],
+      "metadata": {
+        "id": "D2DR9UmTE_Fp"
+      },
+      "execution_count": 138,
       "outputs": []
     },
     {
@@ -75,19 +91,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 416
+          "height": 237
         },
         "id": "S6wsB3zp876Y",
-        "outputId": "1f02db7a-de63-4808-83d4-9f51ed60417b"
+        "outputId": "baa5ad2d-ea87-4714-8a7e-273d57cfa86e"
       },
-      "execution_count": 7,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-798d915d-74d1-447b-aa5c-9afc258351f9\">\n",
+              "  <div id=\"df-97c9514b-0822-4b54-a973-fa6bbb7abcb7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -154,7 +170,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-798d915d-74d1-447b-aa5c-9afc258351f9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-97c9514b-0822-4b54-a973-fa6bbb7abcb7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -205,12 +221,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-798d915d-74d1-447b-aa5c-9afc258351f9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-97c9514b-0822-4b54-a973-fa6bbb7abcb7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-798d915d-74d1-447b-aa5c-9afc258351f9');\n",
+              "          const element = document.querySelector('#df-97c9514b-0822-4b54-a973-fa6bbb7abcb7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -241,7 +257,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 139
         }
       ]
     },
@@ -253,7 +269,7 @@
       "metadata": {
         "id": "ii4viwHDEHt0"
       },
-      "execution_count": 8,
+      "execution_count": 140,
       "outputs": []
     },
     {
@@ -266,7 +282,7 @@
       "metadata": {
         "id": "oFe-m1myD-lq"
       },
-      "execution_count": 9,
+      "execution_count": 141,
       "outputs": []
     },
     {
@@ -277,7 +293,7 @@
       "metadata": {
         "id": "XNUweqZOFDXx"
       },
-      "execution_count": 10,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -290,9 +306,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bRJICY2mHMfv",
-        "outputId": "1c13d64a-4fd3-4155-dd4b-325406bbf558"
+        "outputId": "d3fa3eec-5d34-48a4-f730-2b5140afbb9b"
       },
-      "execution_count": 11,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,7 +333,7 @@
       "metadata": {
         "id": "dFecsli6Hl7s"
       },
-      "execution_count": 13,
+      "execution_count": 144,
       "outputs": []
     }
   ],
